modified:   RefTOC.html 	modified:   Reference/glFog.html 	modified:   Reference/glFogCoord.html 	modified:   Reference/glXFreeContextEXT.html

--- a/RefTOC.html
+++ b/RefTOC.html
@@ -580,6 +580,12 @@ Please select the desired letter:<br>
           onMouseOut="Reset();" target=_top>glFog</a>
         </dl></td>
     <td><dl>
+        <dd><img src="buttons/RedBtn.gif" alt="s">
+          <a href="Reference/glFogCoord.html"
+          onMouseOver="PrintAbstract('ff0000',
+          'glFogCoordf, glFogCoordd: '+
+          'set current fog coordinate.');"
+          onMouseOut="Reset();" target=_top>glFogCoord</a>
         <dd><img src="buttons/BlueBtn.gif" alt="x">
           <a href="Reference/glXFreeContextEXT.html"
           onMouseOver="PrintAbstract('00ffff',
